--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,10 @@
 /build
 
 # misc
-.DS_Store
 .env
+.DS_Store
 .env.local
-.env.development.local
+.env.development
 .env.test.local
 .env.production.local
 
