--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/url-gen": "^1.21.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +13,8 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.453.0",
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.31",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
