--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PUBLIC_CLOUDINARY_CLOUD_NAME=dm2zmhf4i
-PUBLIC_CLOUDINARY_API_KEY=723343172989132
-CLOUDINARY_API_SECRET=7NHNQJM5zErlY15gix0jQvLLTuc
-UPLOAD_PRESET=oozfdsax
+PUBLIC_CLOUDINARY_CLOUD_NAME=
+PUBLIC_CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+UPLOAD_PRESET=
