--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.21.0",
     "@radix-ui/react-tabs": "^1.1.1",
@@ -50,8 +51,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
+    "@babel/preset-typescript": "^7.25.7",
     "@types/jquery": "^3.5.31",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
